--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -759,7 +759,8 @@
     "WELCOME": "Velkommen til OS2IoT",
     "WELCOME-MESSAGE": "Velkommen til OS2iot – din nye indgang til administration af IoT-enheder på tværs af netværkstyper",
     "NO-ACCESS": "Du har endnu ikke de fornødne rettigheder i OS2iot. Kontakt din administrator for at få tildelt rettigheder.",
-    "NO-JOB-ACCESS": "Du har ikke passende jobfunktionsrolle, og har derfor ikke adgang til OS2IoT."
+    "NO-JOB-ACCESS": "Du har ikke passende jobfunktionsrolle, og har derfor ikke adgang til OS2IoT.",
+    "KOMBIT-LOGIN-ERROR": "Der skete en fejl ved login via KOMBIT adgangsstyring. Prøv igen senere."
   },
   "ERROR": {
     "SEMANTIC": "Semantisk fejl, verificer at navn og værdier er på det rigtige format"
