--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -204,6 +204,7 @@
     "ORGANIZATION": "Organisation"
   },
   "DEVICE-MODEL": {
+    "DELETE-FAILED":"Slet Fejlede",
     "HEADLINE":"Detaljer",
     "CREATED":"Oprettet",
     "UPDATED":"Senest opdateret",
@@ -619,7 +620,7 @@
     "IS-USED": "Profilen kan ikke slettes da den er i brug.",
     "USER-ALREADY-EXISTS": "Brugeren findes allerede",
     "ID-INVALID-OR-ALREADY-IN-USE": "Gateway Id skal være unikt. En Gateway med det pågældende Id er allerede brug",
-    "DELETE-NOT-ALLOWED-ITEM-IS-IN-USE": "Payload decoder kan ikke slettes da den er i brug",
+    "DELETE-NOT-ALLOWED-ITEM-IS-IN-USE": "Dette element er i brug og kan derfor ikke slettes",
     "DELETE-NOT-ALLOWED-HAS-SIGFOX-DEVICE": "Applikation kan ikke blive slettet, da den indeholder en eller flere Sigfox enheder."
   },
   "PROFILES": {
