--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -621,7 +621,8 @@
     "USER-ALREADY-EXISTS": "Brugeren findes allerede",
     "ID-INVALID-OR-ALREADY-IN-USE": "Gateway Id skal være unikt. En Gateway med det pågældende Id er allerede brug",
     "DELETE-NOT-ALLOWED-ITEM-IS-IN-USE": "Dette element er i brug og kan derfor ikke slettes",
-    "DELETE-NOT-ALLOWED-HAS-SIGFOX-DEVICE": "Applikation kan ikke blive slettet, da den indeholder en eller flere Sigfox enheder."
+    "DELETE-NOT-ALLOWED-HAS-SIGFOX-DEVICE": "Applikation kan ikke blive slettet, da den indeholder en eller flere Sigfox enheder.",
+    "DELETE-NOT-ALLOWED-HAS-LORAWAN-DEVICE": "Service profilen kan ikke slettes, da den er tilknytte en eller flere LoRaWAN enheder"
   },
   "PROFILES": {
     "NAME": "LoRaWAN Profiler",
