IOT-1134: Rename errormessage

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -609,7 +609,7 @@
     }
   },
   "MESSAGE": {
-    "NAME-INVALID-OR-ALREADY-IN-USE": "En applikation med det navn findes allerede",
+    "NAME-INVALID-OR-ALREADY-IN-USE": "Dette navn er allerede i brug",
     "ORGANIZATION-ALREADY-EXISTS": "Navnet er forkert eller en organisation med det navn eksistere allerede",
     "PASSWORD-DOES-NOT-MEET-REQUIREMENTS": "Password lever ikke op til kravene. Password skal minimum være 6 tegn",
     "GROUP-CAN-ONLY-BE-CREATED-ONCE-PR-ORGANIZATION": "Der er allerede oprette forbindelse til denne Sigfox gruppe",
