IOT-1139 - adding responsive view to top-header

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -81,7 +81,7 @@
     "NAME": "Applikationens navn",
     "DESCRIPTION": "Applikationens beskrivelse",
     "ATTACHED-IOT": "Tilknyttede IoT-enheder",
-    "DATATARGET-SHOW": "Se tilknyttede data targets",
+    "DATATARGET-SHOW": "Tilknyttede data targets",
     "IMPORT-CSV": "Bulk-import af IoT-enheder",
     "BULK": {
       "TEMPLATE": {
