Add error message

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -623,7 +623,8 @@
     "DELETE-NOT-ALLOWED-ITEM-IS-IN-USE": "Dette element er i brug og kan derfor ikke slettes",
     "DELETE-NOT-ALLOWED-HAS-SIGFOX-DEVICE": "Applikation kan ikke blive slettet, da den indeholder en eller flere Sigfox enheder.",
     "DELETE-NOT-ALLOWED-HAS-LORAWAN-DEVICE": "Service profilen kan ikke blive slettet, da den er i brug af en eller flere LoRaWAN enheder.",
-    "OTAA-INFO-MISSING": "OTAA nøgle mangler eller er ikke gyldig."
+    "OTAA-INFO-MISSING": "OTAA nøgle mangler eller er ikke gyldig.",
+    "ABP-INFO-MISSING": "ABP nøgle mangler eller er ikke gyldig."
   },
   "PROFILES": {
     "NAME": "LoRaWAN Profiler",
