IOT-1141 add table differntion for localization.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -209,6 +209,9 @@
     "CREATED":"Oprettet",
     "UPDATED":"Senest opdateret",
     "ID": "Unik identifikator",
+    "TABLE": {
+      "ID": "Id"
+    },
     "NAME": "Navn",
     "TYPE" : "Type",
     "BRANDNAME" : "Mærke",
