IOT-1012 add help navbar icon with link

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -32,7 +32,9 @@
     "SEARCH": "Søgeresultater",
     "MENU-ITEM-MISC": "Generelt",
     "DEVICE-MODEL": "Device model",
-    "BACK": "Tilbage"
+    "BACK": "Tilbage",
+    "LOGOUT": "Log ud",
+    "HELP": "Hjælp"
   },
   "TOPBAR":{
     "SEARCH": {
