IOT-1167 add title to dashboard

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -813,7 +813,8 @@
     "ORGANIZATION": "OS2IoT - Organisationer",
     "DATATARGET": "OS2IoT - Datatarget",
     "BULKIMPORT": "OS2IoT - Bulk import",
-    "IOTDEVICE": "OS2IoT - IoT enhed"
+    "IOTDEVICE": "OS2IoT - IoT enhed",
+    "DASHBOARD": "OS2IoT - Dashboard"
 
   },
   "false": "Nej",
