Made frontend functionality so you can add devices to a multicast when you update or create. These devices is then shown in detail page.

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -176,7 +176,8 @@
     "DATARATE": "Data rate",
     "FREQUENCY": "Frekvens (Hz)",
     "GROUPTYPE": "Gruppe type",
-    "PERIODICITY": "Periodicitet"
+    "PERIODICITY": "Periodicitet",
+    "IOTDEVICE": "IoT enhed(er)"
   },
   "OPENDATADK": {
     "QUESTION": {
