Minor snack changes and check if devices is included before sending downlink

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -53,7 +53,8 @@
     "FAIL": "Fejl - aktion ikke fuldført",
     "LOADFAIL": "Fejl - kunne ikke loade",
     "QUEUE": "Element sat i kø",
-    "CLOSE": "Luk"
+    "CLOSE": "Luk",
+    "NODEVICES": "Kan ikke sende downlink - der er ingen devices!"
   },
   "SEARCH": {
     "ICON": "",
